name:                sky-lambda
version:             0.1.0.0
synopsis:            Simple untyped lambda calculus
description:         Please see README.md
homepage:            https://github.com/xicesky/sky-lambda
license:             BSD3
license-file:        LICENSE
author:              Markus Dangl
maintainer:          sky@q1cc.net
copyright:           (c) 2016 Markus Dangl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sky-lambda
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-missing-signatures
    -fwarn-incomplete-patterns  
    -- -fwarn-name-shadowing  -- Happens too often and is usually ok
    -- -fwarn-unused-imports  -- Generates a load of warnings in main
  build-depends:
      base                  >= 4.7 && < 5
    , mtl                   >= 2.1.3
    , transformers          >= 0.5.0.0
    , unordered-containers  >= 0.2.7
    , megaparsec            >= 5
    , wl-pprint             >= 1.2
    , sky-utils             >= 0.2
    -- , template-haskell      >= 2.10
